# QuantumnCode

./: Cargo.toml  ISSUE_STATUS.md  README.md  test
research_docs_claude/: QUANTUM_TODO.md  research_01_architecture_and_build.md  research_02_router_deep_dive.md  research_03_skills_agents_optimization.md  research_04_todo_audit_and_roadmap.md
src/: app.rs  cli.rs  main.rs
src/agent/: executor.rs  mod.rs  parser.rs  tools.rs
src/commands/: agent.rs  chat.rs  config.rs  edit.rs  git.rs  help.rs  mod.rs  model.rs  review.rs  scaffold.rs  session.rs  status.rs  test.rs  theme.rs
src/config/: mod.rs  settings.rs  themes.rs
src/prompts/: modes.rs  system.rs
src/providers/: anthropic.rs  llama_cpp.rs  lm_studio.rs  local_discover.rs  mod.rs  ollama.rs  openai.rs  opencode.rs  provider_trait.rs  traits.rs
src/rag/: mod.rs
src/router/: analyzer.rs  context.rs  memory.rs  mod.rs  mode.rs  model.rs  tests.rs  tools.rs  types.rs
src/tools/: bash.rs  glob.rs  grep.rs  mod.rs  read_file.rs  write_file.rs
src/tui/: app.rs  event.rs  mod.rs  render.rs
src/tui/widgets/: dropdown.rs  mod.rs  tabs.rs
src/utils/: mod.rs  syntax.rs
themes/: deep_black.toml  default.toml  hacker.toml  tokyo_night.toml
